src/main/java/org/example/profiruparser/errors/LoginException.java
package org.example.profiruparser.errors;

public class LoginException extends SearchException {
    public LoginException(String message) {
        super(message);
    }
}
